WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163964
[CSS Parser] Improvements to selector parsing
https://bugs.webkit.org/show_bug.cgi?id=163964
Summary
[CSS Parser] Improvements to selector parsing
Dave Hyatt
Reported
2016-10-25 12:29:58 PDT
[CSS Parser] Improvements to selector parsing
Attachments
Patch
(22.86 KB, patch)
2016-10-25 12:44 PDT
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
Patch
(27.44 KB, patch)
2016-10-25 14:50 PDT
,
Dave Hyatt
zalan
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2016-10-25 12:44:53 PDT
Created
attachment 292803
[details]
Patch
Dave Hyatt
Comment 2
2016-10-25 14:50:43 PDT
Created
attachment 292827
[details]
Patch
WebKit Commit Bot
Comment 3
2016-10-25 14:53:02 PDT
Attachment 292827
[details]
did not pass style-queue: ERROR: Source/WebCore/css/parser/CSSParserValues.cpp:413: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] ERROR: Source/WebCore/css/CSSSelector.h:250: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dave Hyatt
Comment 4
2016-10-25 16:24:02 PDT
Fixed in
r207854
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug